--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<p>Hello World</p>
+<html>
+    <head>
+        <title>OJ</title>
+    </head>
+    <body>
+        <p>Hello World</p>
+    </body>
+</html>
